@@ -1,3 +1,10 @@
+2018-03-26  Carl Hetherington  <cth@carlh.net>
+
+	* Add time axis to audio analysis (part of #1082).
+
+	* Note: from this point in the ChangeLog release versions
+	are marked using git tags and not written to the ChangeLog.
+
 2018-03-25  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.13.2 released.
